ApexTrailhead/force-app/main/default/objects/TrailModule__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Trail-modules</relationshipLabel>
    <relationshipName>Trail_modules</relationshipName>
    <type>Lookup</type>
</CustomField>