ApexTrailhead/force-app/main/default/objects/TrailModule__c/fields/TimeEstimatedTrailModule__c.field-meta.xml
<CustomField>
    <fullName>TimeEstimatedTrailModule__c</fullName>
    <label>Time Estimated TrailModule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>